--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-07 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed mod_udpd/mod_udp.
+
+	* DNS checking when creating tentacles.
+
 2010-09-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added ticket table object (to stamp messages).
