--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-09-07 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Password checksum now uses SHA-1.
+
 	* Fixed mod_udpd/mod_udp.
 
 	* DNS checking when creating tentacles.
