--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-09-08 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Connection ping delay calc works.
+
 	* Massive gettext strategy changed, using dummy _x_ alternative.
 
 	* Bar response sent when receiving foo.
