--- a/liquidwar6/doc/advanced-selfdoc.texi
+++ b/liquidwar6/doc/advanced-selfdoc.texi
@@ -539,6 +539,44 @@ libCurl. This is mostly for debugging purpose, it can lead to rather big log
 files.
 @end deffn
 
+@subsection network-reliability
+@deffn {Command-line option} @code{--network-reliability=<value>}
+@deffnx {Environment variable} @code{LW6_NETWORK_RELIABILITY}
+@deffnx {XML key} @code{network-reliability}
+Type: integer
+
+Default value: 1000
+Min value: 1
+Max value: 1000000000
+
+The program assumes network is non-reliable, however the problem with those
+assumptions is that when you test, network is always reliable, even with
+non-garanteed protocols like UDP. This option will force the program to
+actually ignore some calls to send or recv functions, simulating a network
+disfunction. This is to ensure the internal mecanisms correcting network
+problems do work for good, on daily regular use. It's not possible to set it
+to a perfect behavior, never dropping any packet, however using the default
+settings you probably won't even notice the performance drop induced by having
+to fix problems. The highest the number is, the most reliable network will
+look, the algorithm is simply to drop one message out of X.
+@end deffn
+
+@subsection open-relay
+@deffn {Command-line option} @code{--open-relay=<value>}
+@deffnx {Environment variable} @code{LW6_OPEN_RELAY}
+@deffnx {XML key} @code{open-relay}
+Type: boolean
+
+Default value: false
+
+Enables forwarding of abritrary network messages. If open relay is forbidden,
+the game will only forward messages when physical sender and logical sender
+are the same. This is to say if messages come from A for C and is sent by A to
+B, B will forward it to C. But if message comes from X to C and is sent by A
+to B, then B won't forward it. In practice, it means without open relay,
+messages can only be forwarded once.
+@end deffn
+
 @subsection pilot-lag
 @deffn {Command-line option} @code{--pilot-lag=<value>}
 @deffnx {Environment variable} @code{LW6_PILOT_LAG}
@@ -603,6 +641,21 @@ wish to have something rather low here, to keep network and 'logic' function
 responsiveness. Passed 60 frames per second, speed is really only for visual
 comfort, as Liquid War 6 is now so fast-paced that it requires 200 frames/sec
 to outperform opponents.
+@end deffn
+
+@subsection trojan
+@deffn {Command-line option} @code{--trojan=<value>}
+@deffnx {Environment variable} @code{LW6_TROJAN}
+@deffnx {XML key} @code{trojan}
+Type: boolean
+
+Default value: false
+
+Make the program act like a (stupid) trojan horse, trying to fake messages,
+sending various inconsistent informations. This is to check the normal version
+of the program is able to detect such a fake and kick it out of the game. It's
+of no use for regular players, be sure to unset this if you want to play for
+good.
 @end deffn
 
 @subsection z-decode
