--- a/liquidwar6/doc/cnx-gdoc.texi
+++ b/liquidwar6/doc/cnx-gdoc.texi
@@ -1,4 +1,4 @@
-@deftypefun {lw6cnx_connection_t *} {lw6cnx_connection_new} (char * @var{local_url}, char * @var{remote_url}, char * @var{remote_ip}, int @var{remote_port}, char * @var{password}, u_int64_t @var{local_id}, u_int64_t @var{remote_id}, lw6cnx_recv_callback_t @var{recv_callback_func}, void * @var{recv_callback_data})
+@deftypefun {lw6cnx_connection_t *} {lw6cnx_connection_new} (char * @var{local_url}, char * @var{remote_url}, char * @var{remote_ip}, int @var{remote_port}, char * @var{password}, u_int64_t @var{local_id}, u_int64_t @var{remote_id}, int @var{dns_ok}, int @var{network_reliability}, lw6cnx_recv_callback_t @var{recv_callback_func}, void * @var{recv_callback_data})
 @var{local_url}:  the local public URL
 
 @var{remote_url}:  the remote public URL
@@ -12,6 +12,10 @@
 @var{local_id}:  the local ID
 
 @var{remote_id}:  the remote ID
+
+@var{dns_ok}:  1 if no DNS mismatch, 0 if IP does not match public URL
+
+@var{network_reliability}:  drop 1 out of X packets
 
 @var{recv_callback_func}:  a callback to call when data is received
 
@@ -58,6 +62,72 @@ Generates a new foo_bar_key, and schedules the next foo message send timestamp.
 @strong{Return value:}  none.
 @end deftypefun
 
+@deftypefun {int} {lw6cnx_connection_lock_send} (lw6cnx_connection_t * @var{connection})
+@var{connection}:  the connexion to lock
+
+Acquires a "send" lock on the connexion, the idea is to avoid
+too threads sending data using the same socket at the same time.
+Note that each backend must call this when accessing the socket,
+there's no top-level lock for the sake of performance.
+
+@strong{Return value:}  1 on success, 0 if not.
+@end deftypefun
+
+@deftypefun {void} {lw6cnx_connection_unlock_send} (lw6cnx_connection_t * @var{connection})
+@var{connection}:  the connexion to lock
+
+Releases a "send" lock on the connexion, the idea is to avoid
+too threads sending data using the same socket at the same time.
+Note that each backend must call this when accessing the socket,
+there's no top-level lock for the sake of performance.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6cnx_connection_reliability_filter} (lw6cnx_connection_t * @var{connection})
+@var{connection}:  the connexion concerned
+
+Will filter and return true only in "rare" cases when packets
+must be artificially dropped for testing purpose.
+
+@strong{Return value:}  1 if message must be sent/received, 0 if not
+@end deftypefun
+
+@deftypefun {char *} {lw6cnx_password_checksum} (char * @var{seed}, char * @var{password})
+@var{seed}:  a seed to blur the password, can be NULL
+
+@var{password}:  the password, can be NULL
+
+Calculates the checksum of a password, and returns
+it as a string, ready to be sent on the network.
+If password is empty or NULL, then an empty (but
+not NULL unless internal error) string will be
+returned. All LW6 protocols should send
+these checksums instead of real passwords, then
+on server side value can be checked against both
+real password and its checksum. The seed is here
+so that eavesdropper can't reuse the checksum to
+connect on random sessions. Seed can typically
+be the node 'public_url' value.
+
+@strong{Return value:}  a dynamically allocated string
+@end deftypefun
+
+@deftypefun {int} {lw6cnx_password_verify} (char * @var{seed}, char * @var{password_here}, char * @var{password_received})
+@var{seed}:  a seed to blur the password, can be NULL
+
+@var{password_here}:  the local password, can be NULL
+
+@var{password_received}:  the password received from network, can be NULL
+
+Tells wether a password received over the network is valid.
+The @code{password_here} argument (the local password) will be
+checksumed so that @code{password_received} is checked against both
+clear and checksumed values, so it can be in any form.
+
+@strong{Return value:}  1 if OK, passwords are the same, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6cnx_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
@@ -95,7 +165,7 @@ Clears the object (frees memory).
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {u_int32_t} {lw6cnx_ticket_table_get_recv} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id})
+@deftypefun {u_int64_t} {lw6cnx_ticket_table_get_recv} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id})
 @var{ticket_table}:  the ticket table to query
 
 @var{peer_id}:  the id of remote node
@@ -133,7 +203,7 @@ send it again.
 @strong{Return value:}  the ticket used to check incoming messages.
 @end deftypefun
 
-@deftypefun {u_int32_t} {lw6cnx_ticket_table_get_send} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id})
+@deftypefun {u_int64_t} {lw6cnx_ticket_table_get_send} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id})
 @var{ticket_table}:  the ticket table to query
 
 @var{peer_id}:  the id of remote node
@@ -145,7 +215,7 @@ must be initialized with the value the peer gives us.
 @strong{Return value:}  the ticket used to stamp outgoing messages.
 @end deftypefun
 
-@deftypefun {void} {lw6cnx_ticket_table_set_send} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id}, u_int32_t @var{send_ticket})
+@deftypefun {void} {lw6cnx_ticket_table_set_send} (lw6cnx_ticket_table_t * @var{ticket_table}, char * @var{peer_id}, u_int64_t @var{send_ticket})
 @var{ticket_table}:  the ticket table to query
 
 @var{peer_id}:  the id of remote node
