--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -6,7 +6,7 @@ Generate a HELLO command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_ticket} (lw6nod_info_t * @var{info}, u_int32_t @var{ticket})
+@deftypefun {char *} {lw6msg_cmd_generate_ticket} (lw6nod_info_t * @var{info}, u_int64_t @var{ticket})
 @var{info}:  the node info to use
 
 @var{ticket}:  the ticket to send
@@ -44,8 +44,24 @@ Generate a GOODBYE command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_cmd_generate_data} (int @var{serial}, int @var{i}, int @var{n}, char * @var{ker_msg})
+@var{serial}:  the message serial number
+
+@var{i}:  the message index in the group
+
+@var{n}:  the number of messages in the group
+
+@var{ker_msg}:  the actual content of the message (passed to core algo)
+
+Generate a DATA command. Serial is an ever increasing number,
+i and n are most of the time 1 and 1, they are usefull
+only in long multipart messages.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
 @deftypefun {int} {lw6msg_cmd_analyse_hello} (lw6nod_info_t ** @var{info}, char * @var{msg})
-@var{info}:  if not NULL, will contain (remote) node info on success
+@var{info}:  will contain (remote) node info on success
 
 @var{msg}:  the message to analyse
 
@@ -54,8 +70,8 @@ Analyzes a HELLO message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_ticket} (lw6nod_info_t ** @var{info}, u_int32_t * @var{ticket}, char * @var{msg})
-@var{info}:  if not NULL, will contain (remote) node info on success
+@deftypefun {int} {lw6msg_cmd_analyse_ticket} (lw6nod_info_t ** @var{info}, u_int64_t * @var{ticket}, char * @var{msg})
+@var{info}:  will contain (remote) node info on success
 
 @var{ticket}:  if not NULL, will contain the ticket value on success
 
@@ -67,7 +83,7 @@ Analyzes a TICKET message.
 @end deftypefun
 
 @deftypefun {int} {lw6msg_cmd_analyse_foo} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, char * @var{msg})
-@var{info}:  if not NULL, will contain (remote) node info on success
+@var{info}:  will contain (remote) node info on success
 
 @var{key}:  if not NULL, will contain the foo/bar key on success
 
@@ -79,7 +95,7 @@ Analyzes a FOO message.
 @end deftypefun
 
 @deftypefun {int} {lw6msg_cmd_analyse_bar} (lw6nod_info_t ** @var{info}, u_int32_t * @var{key}, char * @var{msg})
-@var{info}:  if not NULL, will contain (remote) node info on success
+@var{info}:  will contain (remote) node info on success
 
 @var{key}:  if not NULL, will contain the foo/bar key on success
 
@@ -91,11 +107,25 @@ Analyzes a BAR message.
 @end deftypefun
 
 @deftypefun {int} {lw6msg_cmd_analyse_goodbye} (lw6nod_info_t ** @var{info}, char * @var{msg})
-@var{info}:  if not NULL, will contain (remote) node info on success
+@var{info}:  will contain (remote) node info on success
 
 @var{msg}:  the message to analyse
 
 Analyzes a GOODBYE message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6msg_cmd_analyse_data} (int * @var{serial}, int * @var{i}, int * @var{n}, char ** @var{ker_msg}, char * @var{msg})
+@var{serial}:  will contain serial number on success
+
+@var{i}:  will contain group index on success
+
+@var{n}:  will contain group size on success
+
+@var{ker_msg}:  will contain actual message on success
+
+Analyzes a DATA message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
@@ -254,7 +284,7 @@ Runs the @code{nod} module test suite.
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
-@deftypefun {u_int32_t} {lw6msg_ticket_calc_sig} (u_int32_t @var{ticket}, u_int64_t @var{from_id}, u_int64_t @var{to_id}, char * @var{msg})
+@deftypefun {u_int32_t} {lw6msg_ticket_calc_sig} (u_int64_t @var{ticket}, u_int64_t @var{from_id}, u_int64_t @var{to_id}, char * @var{msg})
 @var{ticket}:  the (private) ticket to use
 
 @var{from_id}:  the sender/creator
@@ -272,7 +302,7 @@ serious bug!).
 @strong{Return value:}  the sig, always non-zero
 @end deftypefun
 
-@deftypefun {int} {lw6msg_ticket_check_sig} (u_int32_t @var{ticket}, u_int64_t @var{from_id}, u_int64_t @var{to_id}, char * @var{msg}, u_int32_t @var{ticket_sig})
+@deftypefun {int} {lw6msg_ticket_check_sig} (u_int64_t @var{ticket}, u_int64_t @var{from_id}, u_int64_t @var{to_id}, char * @var{msg}, u_int32_t @var{ticket_sig})
 @var{ticket}:  the (private) ticket to use
 
 @var{from_id}:  the sender/creator
