--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-12 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed bug in dynamic loading, would segfault if not found.
+
 2010-09-11 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Ping_msec value now expires if not updated regularly.
