--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,15 @@
+2010-09-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Full http/httpd connectivity, even in non-OOB.
+
+2010-09-15 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Log funcs do not call malloc anymore (lock/race cond suspected).
+
+2010-09-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implementing mod-http/mod-httpd non-OOB messages.
+
 2010-09-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed database reset bug.
