--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3631,6 +3631,21 @@ Additionnally, helps avoiding memory leaks and buffer overflows.
 @strong{Return value:}  a new allocated string, must be freed.
 @end deftypefun
 
+@deftypefun {int} {lw6sys_buf_sprintf} (char * @var{buf}, int @var{len}, char * @var{fmt},  @var{...})
+@var{buf}:  a buffer of len+1 chars
+
+@var{len}:  the max length of string
+
+@var{fmt}:  a format string, like the one you would pass to @code{printf}
+@...: optional arguments, like the ones you would pass to @code{printf}
+
+Almost like snprintf except that it will *always* append a
+char 0 ('\0') at the end of the string. Therefore buf
+must be of size len+1.
+
+@strong{Return value:}  1 if success, 0 if failed.
+@end deftypefun
+
 @deftypefun {int} {lw6sys_str_is_blank} (char * @var{str})
 @var{str}:  the string to test
 
@@ -3752,6 +3767,18 @@ Will not handle strings which already contain newline
 characters perfectly.
 
 @strong{Return value:}  a newly allocated string, must be freed.
+@end deftypefun
+
+@deftypefun {void} {lw6sys_str_reformat_this} (char * @var{str}, int @var{nb_columns})
+@var{str}:  a pointer to the string we want to modify
+
+Reformats a string, that is, insert newline characters in the
+right places to that it fits in a given number of columns.
+This function will modify the buffer so @code{str} must be writeable.
+Will not handle strings which already contain newline
+characters perfectly.
+
+@strong{Return value:}  none
 @end deftypefun
 
 @deftypefun {char *} {lw6sys_eol} ()
