--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -1055,7 +1055,7 @@ emergency function.
 @node Network games, Graphics, User interface, User's manual
 @section Network games
 
-@subsection Set up your ``public url''
+@subsection Choose your ``public url''
 
 Liquid War 6 needs to name your ``node'' (you can think as your
 server instance of the game) and have a unique URL (address) to
@@ -1068,18 +1068,24 @@ it should work flawlessly.
 
 Problems can arise if you have a peculiar network configuration,
 if you have multiple non-loopback network interfaces, if you use
-NAT to protect yourself and/or if your context forces you to do so.
+NAT to protect yourself from intruders and/or if your 
+context forces you to do so.
 In that case, Liquid War won't be able to guess a correct URL
-automatically. In that case you need to set it up manually either
+automatically. So you need to set it up manually either
 by editing the @code{public-url} entry in the config file, 
 changing environment variable @code{LW6_PUBLIC_URL} or
 passing the @code{--public-url=http://<host>:<port>/} argument
 when running the game. Typically, if you are behind a firewall
-which does NAT, use the firewall address.
+which does NAT, use the firewall address. The right address is
+the address which, given to remote hosts, will allow them
+to connect on your game instance.
 
 @subsection Starting a node
 
-A node is started automatically when you run the game.
+A node is started automatically when you run the game. Even
+if you don't start to play, node starts in the background
+and exchanges data with other nodes, mostly to discover
+them and maintain its internal map of existing nodes and games.
 
 So even without starting a network game, you should be able
 to point a web browser on your node and see a web page
@@ -1108,6 +1114,27 @@ the game might disappear, game can continue without it.
 
 This is why the main network module is called @code{libp2p},
 this is a reference to the term ``peer to peer''.
+
+@subsection Communities
+
+Once a node is connected to another one, they've started 
+a ``community''. Formally, a stand-alone node accepting for
+connection is already a community, even if it has only one
+member, but the only really interesting communities are
+those formed with several nodes.
+
+A community can't be reached through a given server, to
+connect to one you just need to connect on one of its member
+nodes. All nodes are equivalent, there's no master, no root
+node, nodes collaborate to share the same real-time information
+and maintaine an up-to-date game state.
+
+Of course, conflicts can arise, and in that case nodes need
+to agree on an acceptable solution. Normally, the program takes
+decisions automatically (for instance, it could decide to ``kick''
+a node out of the community) so the player does not have to
+care about this, but this is expected to be one of the most tricky
+(and passionating) part of Liquid War 6 hacking.
 
 @subsection Firewall settings
 
