--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed broken support of SIGHUP on mingw32.
+
 2010-09-20 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added community_id and round fields to node object.
