--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-06 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed typo in mingw32 socket code.
+
 2011-03-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed broken support of SIGHUP on mingw32.
