--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed bug 33188 typo in configure.ac (detection of libpng 1.4)
+
 2011-03-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Copyright 2010 -> 2011.
