--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.0.10beta-1vendor) unstable; urgency=low
+
+  * Simpler packages core/data/dev.
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Thu, 19 May 2011 20:15:00 +0100
+
 liquidwar6 (0.0.6beta-4vendor) unstable; urgency=low
 
   * Fixed devel package, conflicting libs.
