--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-19 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed debian package.
+
 2010-08-24 : Christian Mauduit <ufoot@ufoot.org>
 
 	* 0.0.9beta -> 0.0.10beta.
