--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-25 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added water sounds.
+
 2011-05-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed debian package generation + version number in binary.
