--- a/liquidwar6/doc/sound-selfdoc.texi
+++ b/liquidwar6/doc/sound-selfdoc.texi
@@ -36,6 +36,20 @@ peculiar map. This is not a complex regex-enabled filter, just a plain string
 search. Even the '*' wildcard won't work.
 @end deffn
 
+@subsection fx-volume
+@deffn {Command-line option} @code{--fx-volume=<value>}
+@deffnx {Environment variable} @code{LW6_FX_VOLUME}
+@deffnx {XML key} @code{fx-volume}
+Type: float
+
+Default value: 0.3
+Min value: 0
+Max value: 1
+
+Set the sound effects volume. This is a floating point value. 0 is mute.
+Maximum value is 1.
+@end deffn
+
 @subsection music-volume
 @deffn {Command-line option} @code{--music-volume=<value>}
 @deffnx {Environment variable} @code{LW6_MUSIC_VOLUME}
@@ -62,17 +76,17 @@ Sets the sound backend AKA 'snd' to use. Can be 'ogg' or 'csound' but only
 'ogg' will produce sound in the current release.
 @end deffn
 
-@subsection sound-volume
-@deffn {Command-line option} @code{--sound-volume=<value>}
-@deffnx {Environment variable} @code{LW6_SOUND_VOLUME}
-@deffnx {XML key} @code{sound-volume}
+@subsection water-volume
+@deffn {Command-line option} @code{--water-volume=<value>}
+@deffnx {Environment variable} @code{LW6_WATER_VOLUME}
+@deffnx {XML key} @code{water-volume}
 Type: float
 
-Default value: 0.3
+Default value: 0.2
 Min value: 0
 Max value: 1
 
-Set the sound volume.This is a floating point value. 0 is mute. Maximum value
-is 1.
+Set the volume for water sounds. This is a floating point value. 0 is mute.
+Maximum value is 1.
 @end deffn
 
